--- a/styles.css
+++ b/styles.css
@@ -123,8 +123,8 @@ h1 {
     font-size: 2rem;
   }
   .board {
-    width: 100%;
-    height: 100%;
+    width: 300px;
+    height: 300px;
   }
 }
 @media (max-width: 330px) {
